force-app/main/default/objects/Quote_Line_Item__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Artist related to this Line Item</inlineHelpText>
    <label>Artist</label>
    <referenceTo>Artist__c</referenceTo>
    <relationshipLabel>Quote Line_Item</relationshipLabel>
    <relationshipName>Quote_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>