force-app/main/default/objects/Quote_Line_Item__c/fields/Include_in_discount__c.field-meta.xml
<CustomField>
    <fullName>Include_in_discount__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Should this item be included in the Quote Discount ?</inlineHelpText>
    <label>Include in discount</label>
    <type>Checkbox</type>
</CustomField>