force-app/main/default/objects/Quote_Line_Item__c/fields/Technical__c.field-meta.xml
<CustomField>
    <fullName>Technical__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the line item is related to a technical charge</inlineHelpText>
    <label>Technical</label>
    <type>Checkbox</type>
</CustomField>