force-app/main/default/objects/Quote_Line_Item__c/fields/Travel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Travel_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is a travel related cost</inlineHelpText>
    <label>Travel Cost</label>
    <type>Checkbox</type>
</CustomField>