force-app/main/default/objects/Quote_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>